--- a/Rapidlaunch/Views/ProviderHomePage/Index.cshtml
+++ b/Rapidlaunch/Views/ProviderHomePage/Index.cshtml
@@ -1,9 +1,14 @@
-﻿@model IEnumerable<Rapidlaunch.Models.ProviderHomePage>
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+@model IEnumerable<Rapidlaunch.Models.ProviderHomePage>
 
 @{
     ViewData["Title"] = "Index";
 }
-<h1> Provider</h1>
+@if (SignInManager.IsSignedIn(User))
+{
+    <h1> Provider</h1>
     <div class="card-columns">
         <div class="card">
             <p>  </p>
@@ -103,3 +108,13 @@
             </div>
         </div>
     </div>
+}
+else
+{
+    <div class="row">
+        <div class="col-md-4">
+            <h2>You are not authorised to view this content - <br />Please log in.</h2>
+            <br /><a class="btn btn-danger" asp-area="identity" asp-page="/Account/Login">Login</a>
+        </div>
+    </div>
+}
