--- a/Rapidlaunch/Views/Shared/_Layout.cshtml
+++ b/Rapidlaunch/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar sticky-top navbar-expand-sm navbar-toggleable-sm navbar-light bg-light border-light box-shadows ">
+        <nav class="navbar fixed-top navbar-expand-sm navbar-toggleable-sm navbar-light bg-light border-light box-shadows ">
             <div class="container-fluid ">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"> <img src="~/Assets/RapidLaunchTester.PNG" , height="60" width="220 " /> </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -98,8 +98,10 @@
         </main>
     </div>
   
+
+
     <footer class="border-top footer text-muted">
-        <div class="container-fluid">
+        <div class="container-fluid ">
             <!-- container fluid -->
             Rapid Launch Ltd &copy; 2019 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>    
