--- a/Rapidlaunch/Views/Addresses/Index.cshtml
+++ b/Rapidlaunch/Views/Addresses/Index.cshtml
@@ -1,14 +1,15 @@
-﻿@model IEnumerable<Rapidlaunch.Models.Address>
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+
+@model IEnumerable<Rapidlaunch.Models.Address>
 
 @{
     ViewData["Title"] = "Index";
 }
-
-    <h1>Address</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<h1>Address</h1>
+@if (SignInManager.IsSignedIn(User))
+{
 <table class="table">
     <thead>
         <tr>
@@ -31,36 +32,46 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.addressLine1)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.addressLine2)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.addressLine3)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.postCode)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.country.CountryID)
-            </td>
-            <td class="tester-editor">
-                <div class="dropdownIndex">
-                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                        Data Option
-                        <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li><a asp-action="Edit" asp-route-id="@item.AddressID">Edit</a></li>
-                        <li><a asp-action="Details" asp-route-id="@item.AddressID">Details</a></li>
-                        <li><a asp-action="Delete" asp-route-id="@item.AddressID">Delete</a></li>
-                    </ul>
-                </div>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.addressLine1)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.addressLine2)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.addressLine3)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.postCode)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.country.CountryID)
+                </td>
+                <td class="tester-editor">
+                    <div class="dropdownIndex">
+                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                            Data Option
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li><a asp-action="Edit" asp-route-id="@item.AddressID">Edit</a></li>
+                            <li><a asp-action="Details" asp-route-id="@item.AddressID">Details</a></li>
+                            <li><a asp-action="Delete" asp-route-id="@item.AddressID">Delete</a></li>
+                        </ul>
+                    </div>
+            </tr>
+        }
     </tbody>
 </table>
+    }
+else {
+<div class="row">
+    <div class="col-md-4">
+        <h2>You are not authorised to view this content - <br />Please log in.</h2>
+        <br /><a class="btn btn-danger" asp-area="identity" asp-page="/Account/Login">Login</a>
+    </div>
+</div>
+}
