--- a/Rapidlaunch/Views/Home/Index.cshtml
+++ b/Rapidlaunch/Views/Home/Index.cshtml
@@ -3,11 +3,9 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-
-
-
+<h1> Rapid Launch</h1>
                 <div class="row">
-                    <div class="carousel slide" style="width: 500px; margin: 0 auto">
+                    <div class="carousel slide" style="width: 500px;height:80px ; margin: 0 auto">
                         <div class="col align-self-center">
                             <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
                                 <ol class="carousel-indicators">
@@ -19,7 +17,7 @@
                                 </ol>
                                 <div class="carousel-inner">
                                     <div class="carousel-item active" data-interval="4000">
-                                        <img class="d-block w-100" src="~/Assets/Launch1.jpg">
+                                        <img class="d-block w-100 h-10" src="~/Assets/Launch1.jpg">
                                     </div>
                                     <div class="carousel-item" data-interval="4000">
                                         <img class="d-block w-100" src="~/Assets/Launch2.jpg">
