--- a/Rapidlaunch/Views/HomePage/Index.cshtml
+++ b/Rapidlaunch/Views/HomePage/Index.cshtml
@@ -1,13 +1,18 @@
-﻿@model IEnumerable<Rapidlaunch.Models.HomePage>
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+@model IEnumerable<Rapidlaunch.Models.HomePage>
 @{
     ViewData["Title"] = "Index";
 
 }
-
+@if (SignInManager.IsSignedIn(User))
+{
+    <h1> Home </h1>
     <div class="card-columns">
         <div class="card">
             <p>  </p>
-            <div style="width:100%; text-align:center; border-color:transparent;">
+            <div style="width:100%; center; border-color:transparent;">
                 <a class="card-img-top" asp-area="" asp-controller="StaffHomePage" asp-action="Index"> <img src="~/Assets/LaunchImg.png" , height="200" width="200" style="text-align:center" /></a>
             </div>
             <div class="card-body">
@@ -37,13 +42,25 @@
                                     <div class="carousel-item" data-interval="4000">
                                         <a class="weatherwidget-io" href="https://forecast7.com/en/27d66n81d52/florida/" data-label_1="Florida" data-label_2="Launch Site B" data-theme="original">Florida Launch Site B</a>
                                         <script>
-                                            !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');
+                                            !function (d, s, id) {
+                                                var js, fjs = d.getElementsByTagName(s)[0];
+                                                if (!d.getElementById(id))
+                                                {
+                                                    js = d.createElement(s);
+                                                    js.id = id;
+                                                    js.src = 'https://weatherwidget.io/js/widget.min.js';
+                                                    fjs.parentNode.insertBefore(js, fjs);
+                                                }
+                                            }(document, 'script', 'weatherwidget-io-js');
                                         </script>
                                     </div>
                                     <div class="carousel-item" data-interval="4000">
                                         <a class="weatherwidget-io" href="https://forecast7.com/en/45d6263d31/baikonur/" data-label_1="BAIKONUR" data-label_2="Launch Site C" data-theme="original">BAIKONUR Launch Site C</a>
                                         <script>
-                                            !function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'weatherwidget-io-js');
+                                            !function (d, s, id) {
+                                                var js, fjs = d.getElementsByTagName(s)[0];
+                                                if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = 'https://weatherwidget.io/js/widget.min.js'; fjs.parentNode.insertBefore(js, fjs); }
+                                            }(document, 'script', 'weatherwidget-io-js');
                                         </script>
                                     </div>
 
@@ -74,7 +91,7 @@
                 <div class="row">
                     <div class="carousel slide" style="width: 500px; margin: 0 auto">
                         <div class="col align-self-center">
-                            <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
+                            <div id="carouselExampleIndicators1" class="carousel slide carousel-fade" data-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active" data-interval="4000">
                                         <blockquote class="blockquote mb-0 card-body">
@@ -116,6 +133,15 @@
                                             </footer>
                                         </blockquote>
                                     </div>
+                                    <a class="carousel-control-prev" href="#carouselExampleIndicators1" role="button" data-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="sr-only">Previous</span>
+                                    </a>
+                                    <a class="carousel-control-next" href="#carouselExampleIndicators1" role="button" data-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="sr-only">Next</span>
+                                    </a>
+
                                 </div>
                             </div>
                         </div>
@@ -198,3 +224,14 @@
             </div>
         </div>
     </div>
+
+}
+else
+{
+    <div class="row">
+        <div class="col-md-4">
+            <h2>You are not authorised to view this content - <br />Please log in.</h2>
+            <br /><a class="btn btn-danger" asp-area="identity" asp-page="/Account/Login">Login</a>
+        </div>
+    </div>
+}
