--- a/Rapidlaunch/Views/ProviderAddresses/Create.cshtml
+++ b/Rapidlaunch/Views/ProviderAddresses/Create.cshtml
@@ -13,13 +13,12 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="providerID" class="control-label"></label>
-                <select asp-for="providerID" class ="form-control" asp-items="ViewBag.providerID"></select>
+                <label asp-for="ProviderID" class="control-label"></label>
+                <select asp-for="ProviderID" class ="form-control" asp-items="ViewBag.ProviderID"></select>
             </div>
             <div class="form-group">
-                <label asp-for="addressIdentID" class="control-label"></label>
-                <input asp-for="addressIdentID" class="form-control" />
-                <span asp-validation-for="addressIdentID" class="text-danger"></span>
+                <label asp-for="AddressID" class="control-label"></label>
+                <select asp-for="AddressID" class ="form-control" asp-items="ViewBag.AddressID"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
