--- a/Rapidlaunch/Views/ProviderAddresses/Delete.cshtml
+++ b/Rapidlaunch/Views/ProviderAddresses/Delete.cshtml
@@ -11,18 +11,42 @@
     <h4>ProviderAddress</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Provider)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Provider.ProviderID)
-        </dd class>
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Address)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Address.AddressID)
+        </dd>
     </dl>
-    
+    <!-- <form asp-action="Delete">
+          <input type="hidden" asp-for="ProviderID" />
+          <input type="hidden" asp-for="AddressID" />
+          <input type="submit" value="Delete" class="btn btn-danger" /> |
+          <a asp-action="Index">Back to List</a>
+      </form>
+
+        -->
     <form asp-action="Delete">
-        <input type="hidden" asp-for="providerID" />
-        <input type="hidden" asp-for="addressIdentID" />
+        <input type="hidden" asp-for="AddressID" />
+        <input type="hidden" asp-for="ProviderID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
+    -->
+    @using (Html.BeginForm(null, null, new { id = Model.AddressID, id2 = Model.ProviderID }))
+    {
+        @Html.AntiForgeryToken()
+        <div class="form-action no-color">
+            <input type="submit" value="Delete" class="btn btn-danger" />
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+    }
+
+
 </div>
