--- a/Rapidlaunch/Views/ProviderAddresses/Details.cshtml
+++ b/Rapidlaunch/Views/ProviderAddresses/Details.cshtml
@@ -16,6 +16,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Provider.ProviderID)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Address)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Address.AddressID)
+        </dd>
     </dl>
 </div>
 <div>
