--- a/Rapidlaunch/Views/ProviderAddresses/Edit.cshtml
+++ b/Rapidlaunch/Views/ProviderAddresses/Edit.cshtml
@@ -8,22 +8,65 @@
 
 <h4>ProviderAddress</h4>
 <hr />
-<div class="row">
+<!-- <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="providerID" />
-            <input type="hidden" asp-for="addressIdentID" />
+            <input type="hidden" asp-for="ProviderID" />
+            <input type="hidden" asp-for="AddressID" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
+    -->
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
+
+@using (Html.BeginForm(null, null, new { id = Model.ProviderID, id2 = Model.AddressID }))
+{
+
+    @Html.AntiForgeryToken()
+
+    <!-- <div class="form-action no-color">
+        <div class="form-group">
+            <label asp-for="ProviderID" class="control-label"></label>
+            <select asp-for="ProviderID" class="form-control" asp-items="ViewBag.StaffID"></select>
+            <span asp-validation-for="ProviderID" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="AddressID" class="control-label"></label>
+            <select asp-for="AddressID" class="form-control" asp-items="ViewBag.AddressID"></select>
+            <span asp-validation-for="AddressID" class="text-danger"></span>
+        </div>
+
+        <input type="submit" value="Save" class="btn btn-danger" />
+        @Html.ActionLink("Back to List", "Index")
+    </div> -->
+    @using (Html.BeginForm(null, null, new { id = Model.AddressID, id2 = Model.ProviderID }))
+    {
+
+        @Html.AntiForgeryToken()
+
+        <div class="form-action no-color">
+            <div class="form-group">
+                <label asp-for="ProviderID" class="control-label"></label>
+                <select asp-for="ProviderID" class="form-control" asp-items="ViewBag.StaffID"></select>
+                <span asp-validation-for="ProviderID" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="AddressID" class="control-label"></label>
+                <select asp-for="AddressID" class="form-control" asp-items="ViewBag.AddressID"></select>
+                <span asp-validation-for="AddressID" class="text-danger"></span>
+            </div>
+
+            <input type="submit" value="Save" class="btn btn-danger" />
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+    }
+}
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
