--- a/Rapidlaunch/Views/StaffAddresses/Create.cshtml
+++ b/Rapidlaunch/Views/StaffAddresses/Create.cshtml
@@ -13,14 +13,12 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="staffAdrressID" class="control-label"></label>
-                <input asp-for="staffAdrressID" class="form-control" />
-                <span asp-validation-for="staffAdrressID" class="text-danger"></span>
+                <label asp-for="staffID" class="control-label"></label>
+                <select asp-for="staffID" class ="form-control" asp-items="ViewBag.staffID"></select>
             </div>
             <div class="form-group">
-                <label asp-for="staffIdentID" class="control-label"></label>
-                <input asp-for="staffIdentID" class="form-control" />
-                <span asp-validation-for="staffIdentID" class="text-danger"></span>
+                <label asp-for="AddressID" class="control-label"></label>
+                <select asp-for="AddressID" class ="form-control" asp-items="ViewBag.AddressID"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
