--- a/Rapidlaunch/Views/StaffAddresses/Details.cshtml
+++ b/Rapidlaunch/Views/StaffAddresses/Details.cshtml
@@ -10,6 +10,18 @@
     <h4>StaffAddress</h4>
     <hr />
     <dl class="row">
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Address)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Address.AddressID)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.staff)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.staff.staffID)
+        </dd>
     </dl>
 </div>
 <div>
