--- a/Rapidlaunch/Views/StaffAddresses/Edit.cshtml
+++ b/Rapidlaunch/Views/StaffAddresses/Edit.cshtml
@@ -8,23 +8,40 @@
 
 <h4>StaffAddress</h4>
 <hr />
-<div class="row">
+<!-- <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="staffAdrressID" />
-            <input type="hidden" asp-for="staffIdentID" />
+            <input type="hidden" asp-for="staffID" />
+            <input type="hidden" asp-for="AddressID" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
+    -->
+@using (Html.BeginForm(null, null, new { id = Model.AddressID, id2 = Model.staffID }))
+{
+    @Html.AntiForgeryToken()
+    <div class="form-action no-color">
+        <div class="form-group">
+            <label asp-for="staffID" class="control-label"></label>
+            <select asp-for="staffID" class="form-control" asp-items="ViewBag.staffID"></select>
+            <span asp-validation-for="staffID" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="AddressID" class="control-label"></label>
+            <select asp-for="AddressID" class="form-control" asp-items="ViewBag.AddressID"></select>
+            <span asp-validation-for="AddressID" class="text-danger"></span>
+        </div>
+        <input type="submit" value="Save" class="btn btn-danger" />
+        @Html.ActionLink("Back to List", "Index")
+    </div>
+}
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+
 }
