--- a/Rapidlaunch/Views/StaffAddresses/Index.cshtml
+++ b/Rapidlaunch/Views/StaffAddresses/Index.cshtml
@@ -1,38 +1,56 @@
-﻿@model IEnumerable<Rapidlaunch.Models.StaffAddress>
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<IdentityUser> SignInManager
+@inject UserManager<IdentityUser> UserManager
+@model IEnumerable<Rapidlaunch.Models.StaffAddress>
 
 @{
     ViewData["Title"] = "Index";
 }
-    <link href="~/css/site.css" rel="stylesheet" />
-<h1>Index</h1>
+@if (SignInManager.IsSignedIn(User))
+{
+    <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td class="tester-editor">
-                <div class="dropdownIndex">
-                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                        Data Option
-                        <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu">
-                        @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                        @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                        @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-                    </ul>
-                </div>
-
-            </td>
-        </tr>
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Address)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.staff)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Address.AddressID)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.staff.staffID)
+                    </td>
+                    <td>
+                        @Html.ActionLink("Edit", "Edit", new { id = item.AddressID, id2 = item.staffID }) |
+                        @Html.ActionLink("Details", "Details", new { id = item.AddressID, id2 = item.staffID }) |
+                        @Html.ActionLink("Delete", "Delete", new { id = item.AddressID, id2 = item.staffID })
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 }
-    </tbody>
-</table>
+else
+{
+    <div class="row">
+        <div class="col-md-4">
+            <h2>You are not authorised to view this content - <br />Please log in.</h2>
+            <br /><a class="btn btn-danger" asp-area="identity" asp-page="/Account/Login">Login</a>
+        </div>
+    </div>
+}
