--- a/Rapidlaunch/Views/StaffSafetyRecords/Details.cshtml
+++ b/Rapidlaunch/Views/StaffSafetyRecords/Details.cshtml
@@ -11,16 +11,16 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Staff)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Staff.staffID)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.SafetyRating)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SafetyRating.safetyRatingID)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.rocketType)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.rocketType.rocketTypeID)
         </dd>
     </dl>
 </div>
