--- a/Rapidlaunch/Views/StaffSafetyRecords/Edit.cshtml
+++ b/Rapidlaunch/Views/StaffSafetyRecords/Edit.cshtml
@@ -8,17 +8,12 @@
 
 <h4>StaffSafetyRecord</h4>
 <hr />
-<div class="row">
+<!--<div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="staffID" />
             <input type="hidden" asp-for="safetyRatingID" />
-            <div class="form-group">
-                <label asp-for="rocketTypeID" class="control-label"></label>
-                <select asp-for="rocketTypeID" class="form-control" asp-items="ViewBag.rocketTypeID"></select>
-                <span asp-validation-for="rocketTypeID" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
@@ -29,6 +24,33 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+-->
+@using (Html.BeginForm(null, null, new { id = Model.safetyRatingID, id2 = Model.staffID }))
+ {
+
+    @Html.AntiForgeryToken()
+
+    <div class="form-action no-color">
+        <div class="form-group">
+            <label asp-for="safetyRatingID" class="control-label"></label>
+            <select asp-for="safetyRatingID" class="form-control" asp-items="ViewBag.StaffID"></select>
+            <span asp-validation-for="safetyRatingID" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="staffID" class="control-label"></label>
+            <select asp-for="staffID" class="form-control" asp-items="ViewBag.AddressID"></select>
+            <span asp-validation-for="staffID" class="text-danger"></span>
+        </div>
+
+        <input type="submit" value="Save" class="btn btn-danger" />
+        @Html.ActionLink("Back to List", "Index")
+    </div>
+ }
+
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
