--- a/Rapidlaunch/wwwroot/css/site.css
+++ b/Rapidlaunch/wwwroot/css/site.css
@@ -42,7 +42,7 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
+   Margin bottom by footer height 
   margin-bottom: 60px;
 }
 .footer {
@@ -50,9 +50,9 @@ body {
     bottom: 0;
     width: 100%;
     white-space: nowrap;
-    /* Set the fixed height of the footer here */
+     Set the fixed height of the footer here 
     height: 60px;
-    line-height: 60px; /* Vertically center the text there */
+    line-height: 60px;  Vertically center the text there 
 }
   .alink{
 
@@ -67,15 +67,17 @@ body {
 }
 h1 {
     display: block;
-    font-size: 2em;
+    font-size: 4em;
     margin-top: 0.67em;
     margin-bottom: 0.67em;
     margin-left: 0;
     margin-right: 0;
     font-weight: bold;
     color: red;
-    font-family: "Comic Sans MS";
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    text-align: center;
+    padding: 150px 0px 0px 0px
 }
 thead {
     font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
@@ -110,12 +112,12 @@ body {
     background-image: url('../assets/wallpaper.jpg');
 }
 
-.col-md-4 {
+.formcenter {
     box-sizing: border-box;
     text-align: center;
     
 }
-.form-group {
+.formgrp {
     width: 50%;
     margin-left: 130%
 }
@@ -160,6 +162,11 @@ body {
     text-align:center;
     color:whitesmoke;
 }
-.container-fluid{
+.contcenter{
     text-align:center;
+}
+
+.container-padded {
+    position: relative;
+    top: 75px;
 }
