--- a/Rapidlaunch/Views/Addresses/Create.cshtml
+++ b/Rapidlaunch/Views/Addresses/Create.cshtml
@@ -6,11 +6,11 @@
 
 <h1>Create New Safety Rating </h1>
 
-<h4>Address</h4>
+<h4>Address</h4> <!-- Taking Heading style fromm CSS H4 -->
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create"><!-- names the ASP action-->
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="addressLine1" class="control-label"></label>
