--- a/Rapidlaunch/Views/Addresses/Delete.cshtml
+++ b/Rapidlaunch/Views/Addresses/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this?</h3> <!-- Heading for deleting - style imported from CSS -->
 <div>
     <h4>Address</h4>
     <hr />
