--- a/Rapidlaunch/Views/Addresses/Index.cshtml
+++ b/Rapidlaunch/Views/Addresses/Index.cshtml
@@ -8,70 +8,74 @@
     ViewData["Title"] = "Index";
 }
 <h1>Address</h1>
+<!-- Checks user is signed me in -->
 @if (SignInManager.IsSignedIn(User))
 {
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.addressLine1)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.addressLine2)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.addressLine3)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.postCode)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.country)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+    <table class="table">
+        <!-- Creates a table fills out data -->
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.addressLine1)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.addressLine2)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.addressLine3)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.postCode)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.country.CountryID)
-                </td>
-                <td class="tester-editor">
-                    <div class="dropdownIndex">
-                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-                            Data Option
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a asp-action="Edit" asp-route-id="@item.AddressID">Edit</a></li>
-                            <li><a asp-action="Details" asp-route-id="@item.AddressID">Details</a></li>
-                            <li><a asp-action="Delete" asp-route-id="@item.AddressID">Delete</a></li>
-                        </ul>
-                    </div>
+                <th>
+                    @Html.DisplayNameFor(model => model.addressLine1)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.addressLine2)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.addressLine3)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.postCode)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.country)
+                </th>
+                <th></th>
             </tr>
-        }
-    </tbody>
-</table>
-    }
-else {
-<div class="row">
-    <div class="col-md-4">
-        <h2>You are not authorised to view this content - <br />Please log in.</h2>
-        <br /><a class="btn btn-danger" asp-area="identity" asp-page="/Account/Login">Login</a>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.addressLine1)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.addressLine2)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.addressLine3)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.postCode)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.country.CountryID)
+                    </td>
+                    <td class="tester-editor">
+                        <div class="dropdownIndex">
+                            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+                                <!-- creates button with dropdown -->
+                                Data Option <!-- text saying data option -->
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a asp-action="Edit" asp-route-id="@item.AddressID">Edit</a></li> <!-- text that is hyperlinked to take to address ID - Edit -->
+                                <li><a asp-action="Details" asp-route-id="@item.AddressID">Details</a></li><!-- text that is hyperlinked to take to address ID - Details  -->
+                                <li><a asp-action="Delete" asp-route-id="@item.AddressID">Delete</a></li><!-- text that is hyperlinked to take to address ID - Detail -->
+                            </ul>
+                        </div>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+else
+{ <!-- output if the user isnt signed in-->
+    <div class="row">
+        <div class="col-md-4">
+            <h2>You are not authorised to view this content - <br />Please log in.</h2>
+            <br /><a class="btn btn-danger" asp-area="identity" asp-page="/Account/Login">Login</a>
+        </div>
     </div>
-</div>
 }
