--- a/Rapidlaunch/Views/Home/Index.cshtml
+++ b/Rapidlaunch/Views/Home/Index.cshtml
@@ -3,9 +3,15 @@
 @{
     ViewData["Title"] = "Home Page";
 }
+
 <h1> Rapid Launch</h1>
 
+<body>
 
-
-
-
+    <div class="embed-responsive embed-responsive-4by3">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/u0-pfzKbh2k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <div>
+        <h1> </h1> 
+    </div>
+</body>
